force-app/main/default/objects/CampaignMember/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the attendee did not show up to the conference</inlineHelpText>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>