force-app/main/default/objects/CampaignMember/fields/Reference_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reference_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an Opportunity pays for multiple registrations or memberships link them with this field.</description>
    <inlineHelpText>When an Opportunity pays for multiple registrations or memberships link them with this field.</inlineHelpText>
    <label>Reference Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>