force-app/main/default/objects/CampaignMember/fields/RegistrantAnswers__c.field-meta.xml
<CustomField>
    <fullName>RegistrantAnswers__c</fullName>
    <description>This field will be used to store registrant answers.</description>
    <label>Answers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>