force-app/main/default/objects/CampaignMember/fields/RegistrantQuestions__c.field-meta.xml
<CustomField>
    <fullName>RegistrantQuestions__c</fullName>
    <description>This field will be used to store registrant questions.</description>
    <label>Questions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>