force-app/main/default/objects/CampaignMember/fields/RegistrantQuestionsWithAnswers__c.field-meta.xml
<CustomField>
    <fullName>RegistrantQuestionsWithAnswers__c</fullName>
    <description>This field will be used to store registrant questions and answers.</description>
    <label>Questions and Answers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>