force-app/main/default/objects/CampaignMember/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <inlineHelpText>Which week or weeks is the camper coming for?</inlineHelpText>
    <label>Weeks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
                <default>true</default>
                <label>Week 1</label>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Both Weeks</fullName>
            </value>
            <value>
                <fullName>Both Weeks w Mini Camp</fullName>
            </value>
            <value>
                <fullName>Partial Week</fullName>
            </value>
            <value>
                <fullName>Applied but not accepted at all</fullName>
            </value>
            <value>
                <fullName>Applied for 2 weeks-accepted for 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>