force-app/main/default/objects/CampaignMember/recordTypes/Camper.recordType-meta.xml
<RecordType>
    <fullName>Camper</fullName>
    <active>true</active>
    <description>Use for Campers to get Weeks field to show</description>
    <label>Camper</label>
</RecordType>