force-app/main/default/objects/CampaignMember/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>All other campaign members</description>
    <label>General</label>
</RecordType>